y.output
   0  $accept : Program $end

   1  Program : Decl

   2  Decl : Decl1
   3       | Decl Decl1

   4  Decl1 : VarDec
   5        | FuncDec

   6  VarDec : Var T_Semicolon

   7  Var : Type Ident

   8  Type : Type T_LBracket T_RBracket
   9       | Int
  10       | Double
  11       | Bool
  12       | String
  13       | TIdent

  14  FuncDec : Type Ident T_LParen Formals T_RParen StmtBlock
  15          | Void Ident T_LParen Formals T_RParen StmtBlock

  16  Formals : Formals1
  17          |

  18  Formals1 : Var
  19           | Formals1 T_Comma Var

  20  StmtBlock : T_LBrace VarDecSt StmtSt T_RBrace

  21  VarDecSt :
  22           | VarDecSt VarDec

  23  StmtSt :
  24         | StmtSt Stmt

  25  Stmt : Open
  26       | Matched

  27  Matched : StmtBlock
  28          | Expr15
  29          | T_Semicolon
  30          | ReturnStmt
  31          | PrintStmt
  32          | BreakStmt
  33          | WhileStmt
  34          | ForStmt
  35          | MatchedIfStmt

  36  ReturnStmt : Return T_Semicolon
  37             | Return Expr15

  38  PrintStmt : Print ActualsPrint T_Semicolon

  39  BreakStmt : Break T_Semicolon

  40  ForStmt : ForHeader Stmt

  41  ForHeader : T_For T_LParen Expr15 Expr15 Expr14 T_RParen
  42            | T_For T_LParen T_Semicolon Expr15 Expr14 T_RParen
  43            | T_For T_LParen Expr15 Expr15 T_RParen
  44            | T_For T_LParen T_Semicolon Expr15 T_RParen

  45  WhileStmt : WhileHeader Stmt

  46  WhileHeader : T_While Expr16

  47  Open : IfHeader Stmt
  48       | IfHeader Matched T_Else Open

  49  MatchedIfStmt : IfHeader Matched T_Else Matched

  50  IfHeader : T_If Expr16

  51  ActualsPrint : T_LParen Actuals1 T_RParen

  52  ActualsCall : T_LParen Actuals T_RParen

  53  Actuals :
  54          | Actuals1

  55  Actuals1 : Expr14
  56           | Actuals1 T_Comma Expr14

  57  Expr16 : T_LParen Expr14 T_RParen

  58  Expr15 : Expr14 T_Semicolon

  59  Expr14 : LValue Assign Expr14
  60         | Expr13

  61  Expr13 : Expr11
  62         | Expr12

  63  Expr12 : Expr12 Or Expr11
  64         | Expr11 Or Expr11

  65  Expr11 : Expr10
  66         | Expr9

  67  Expr10 : Expr10 And Expr9
  68         | Expr9 And Expr9

  69  Expr9 : Expr8
  70        | Expr71

  71  Expr8 : Expr8 Equal Expr71
  72        | Expr8 NotEqual Expr71
  73        | Expr71 Equal Expr71
  74        | Expr71 NotEqual Expr71

  75  Expr71 : Expr7
  76         | Expr6

  77  Expr7 : Expr7 LessEqual Expr6
  78        | Expr7 Less Expr6
  79        | Expr7 GreaterEqual Expr6
  80        | Expr7 Greater Expr6
  81        | Expr6 LessEqual Expr6
  82        | Expr6 Less Expr6
  83        | Expr6 GreaterEqual Expr6
  84        | Expr6 Greater Expr6

  85  Expr6 : Expr4
  86        | Expr5

  87  Expr5 : Expr5 Plus Expr4
  88        | Expr5 Negat Expr4
  89        | Expr4 Plus Expr4
  90        | Expr4 Negat Expr4

  91  Expr4 : Expr3
  92        | Expr2

  93  Expr3 : Expr3 Mult Expr2
  94        | Expr3 Div Expr2
  95        | Expr3 Mod Expr2
  96        | Expr2 Mult Expr2
  97        | Expr2 Div Expr2
  98        | Expr2 Mod Expr2

  99  Expr2 : Negat Expr2
 100        | Excla Expr2
 101        | Expr1

 102  Expr1 : LValue
 103        | Call
 104        | Expr

 105  Expr : Constant
 106       | This
 107       | T_LParen Expr14 T_RParen
 108       | T_New T_LParen Ident T_RParen
 109       | T_NewArray T_LParen Expr14 T_Comma Type T_RParen
 110       | T_ReadLine T_LParen T_RParen
 111       | T_ReadInteger T_LParen T_RParen

 112  LValue : Ident
 113         | FieldA
 114         | Expr1 T_LBracket Expr14 T_RBracket

 115  Call : Ident ActualsCall
 116       | FieldA ActualsCall

 117  FieldA : Expr1 T_Dot Ident

 118  Constant : IntC
 119           | DoubleC
 120           | BoolC
 121           | StringC
 122           | Null

 123  Print : T_Print

 124  Break : T_Break

 125  Return : T_Return

 126  Less : T_Less

 127  LessEqual : T_LessEqual

 128  Greater : T_Greater

 129  GreaterEqual : T_GreaterEqual

 130  Assign : T_Assign

 131  Equal : T_Equal

 132  NotEqual : T_NotEqual

 133  And : T_And

 134  Or : T_Or

 135  Plus : T_Plus

 136  Div : T_Div

 137  Mult : T_Times

 138  Mod : T_Mod

 139  Excla : T_Not

 140  Negat : T_Minus

 141  Null : T_Null

 142  This : T_This

 143  Void : T_Void

 144  Int : T_Int

 145  Double : T_Double

 146  Bool : T_Bool

 147  String : T_String

 148  IntC : T_IntConstant

 149  DoubleC : T_DoubleConstant

 150  BoolC : T_BoolConstant

 151  StringC : T_StringConstant

 152  Ident : T_Identifier

 153  TIdent : T_TypeIdentifier

state 0
	$accept : . Program $end  (0)

	T_Void  shift 1
	T_Int  shift 2
	T_Double  shift 3
	T_Bool  shift 4
	T_String  shift 5
	T_TypeIdentifier  shift 6
	.  error

	Program  goto 7
	Decl  goto 8
	Decl1  goto 9
	VarDec  goto 10
	FuncDec  goto 11
	Var  goto 12
	Type  goto 13
	Int  goto 14
	Double  goto 15
	Bool  goto 16
	String  goto 17
	TIdent  goto 18
	Void  goto 19


state 1
	Void : T_Void .  (143)

	.  reduce 143


state 2
	Int : T_Int .  (144)

	.  reduce 144


state 3
	Double : T_Double .  (145)

	.  reduce 145


state 4
	Bool : T_Bool .  (146)

	.  reduce 146


state 5
	String : T_String .  (147)

	.  reduce 147


state 6
	TIdent : T_TypeIdentifier .  (153)

	.  reduce 153


state 7
	$accept : Program . $end  (0)

	$end  accept


state 8
	Program : Decl .  (1)
	Decl : Decl . Decl1  (3)

	T_Void  shift 1
	T_Int  shift 2
	T_Double  shift 3
	T_Bool  shift 4
	T_String  shift 5
	T_TypeIdentifier  shift 6
	$end  reduce 1

	Decl1  goto 20
	VarDec  goto 10
	FuncDec  goto 11
	Var  goto 12
	Type  goto 13
	Int  goto 14
	Double  goto 15
	Bool  goto 16
	String  goto 17
	TIdent  goto 18
	Void  goto 19


state 9
	Decl : Decl1 .  (2)

	.  reduce 2


state 10
	Decl1 : VarDec .  (4)

	.  reduce 4


state 11
	Decl1 : FuncDec .  (5)

	.  reduce 5


state 12
	VarDec : Var . T_Semicolon  (6)

	T_Semicolon  shift 21
	.  error


state 13
	Var : Type . Ident  (7)
	Type : Type . T_LBracket T_RBracket  (8)
	FuncDec : Type . Ident T_LParen Formals T_RParen StmtBlock  (14)

	T_Identifier  shift 22
	T_LBracket  shift 23
	.  error

	Ident  goto 24


state 14
	Type : Int .  (9)

	.  reduce 9


state 15
	Type : Double .  (10)

	.  reduce 10


state 16
	Type : Bool .  (11)

	.  reduce 11


state 17
	Type : String .  (12)

	.  reduce 12


state 18
	Type : TIdent .  (13)

	.  reduce 13


state 19
	FuncDec : Void . Ident T_LParen Formals T_RParen StmtBlock  (15)

	T_Identifier  shift 22
	.  error

	Ident  goto 25


state 20
	Decl : Decl Decl1 .  (3)

	.  reduce 3


state 21
	VarDec : Var T_Semicolon .  (6)

	.  reduce 6


state 22
	Ident : T_Identifier .  (152)

	.  reduce 152


state 23
	Type : Type T_LBracket . T_RBracket  (8)

	T_RBracket  shift 26
	.  error


state 24
	Var : Type Ident .  (7)
	FuncDec : Type Ident . T_LParen Formals T_RParen StmtBlock  (14)

	T_LParen  shift 27
	T_Semicolon  reduce 7


state 25
	FuncDec : Void Ident . T_LParen Formals T_RParen StmtBlock  (15)

	T_LParen  shift 28
	.  error


state 26
	Type : Type T_LBracket T_RBracket .  (8)

	.  reduce 8


state 27
	FuncDec : Type Ident T_LParen . Formals T_RParen StmtBlock  (14)
	Formals : .  (17)

	T_Int  shift 2
	T_Double  shift 3
	T_Bool  shift 4
	T_String  shift 5
	T_TypeIdentifier  shift 6
	T_RParen  reduce 17

	Var  goto 29
	Type  goto 30
	Int  goto 14
	Double  goto 15
	Bool  goto 16
	String  goto 17
	TIdent  goto 18
	Formals  goto 31
	Formals1  goto 32


state 28
	FuncDec : Void Ident T_LParen . Formals T_RParen StmtBlock  (15)
	Formals : .  (17)

	T_Int  shift 2
	T_Double  shift 3
	T_Bool  shift 4
	T_String  shift 5
	T_TypeIdentifier  shift 6
	T_RParen  reduce 17

	Var  goto 29
	Type  goto 30
	Int  goto 14
	Double  goto 15
	Bool  goto 16
	String  goto 17
	TIdent  goto 18
	Formals  goto 33
	Formals1  goto 32


state 29
	Formals1 : Var .  (18)

	.  reduce 18


state 30
	Var : Type . Ident  (7)
	Type : Type . T_LBracket T_RBracket  (8)

	T_Identifier  shift 22
	T_LBracket  shift 23
	.  error

	Ident  goto 34


state 31
	FuncDec : Type Ident T_LParen Formals . T_RParen StmtBlock  (14)

	T_RParen  shift 35
	.  error


state 32
	Formals : Formals1 .  (16)
	Formals1 : Formals1 . T_Comma Var  (19)

	T_Comma  shift 36
	T_RParen  reduce 16


state 33
	FuncDec : Void Ident T_LParen Formals . T_RParen StmtBlock  (15)

	T_RParen  shift 37
	.  error


state 34
	Var : Type Ident .  (7)

	.  reduce 7


state 35
	FuncDec : Type Ident T_LParen Formals T_RParen . StmtBlock  (14)

	T_LBrace  shift 38
	.  error

	StmtBlock  goto 39


state 36
	Formals1 : Formals1 T_Comma . Var  (19)

	T_Int  shift 2
	T_Double  shift 3
	T_Bool  shift 4
	T_String  shift 5
	T_TypeIdentifier  shift 6
	.  error

	Var  goto 40
	Type  goto 30
	Int  goto 14
	Double  goto 15
	Bool  goto 16
	String  goto 17
	TIdent  goto 18


state 37
	FuncDec : Void Ident T_LParen Formals T_RParen . StmtBlock  (15)

	T_LBrace  shift 38
	.  error

	StmtBlock  goto 41


state 38
	StmtBlock : T_LBrace . VarDecSt StmtSt T_RBrace  (20)
	VarDecSt : .  (21)

	.  reduce 21

	VarDecSt  goto 42


state 39
	FuncDec : Type Ident T_LParen Formals T_RParen StmtBlock .  (14)

	.  reduce 14


state 40
	Formals1 : Formals1 T_Comma Var .  (19)

	.  reduce 19


state 41
	FuncDec : Void Ident T_LParen Formals T_RParen StmtBlock .  (15)

	.  reduce 15


state 42
	StmtBlock : T_LBrace VarDecSt . StmtSt T_RBrace  (20)
	VarDecSt : VarDecSt . VarDec  (22)
	StmtSt : .  (23)

	T_Int  shift 2
	T_Double  shift 3
	T_Bool  shift 4
	T_String  shift 5
	T_TypeIdentifier  shift 6
	T_Null  reduce 23
	T_This  reduce 23
	T_For  reduce 23
	T_While  reduce 23
	T_If  reduce 23
	T_Return  reduce 23
	T_Break  reduce 23
	T_New  reduce 23
	T_NewArray  reduce 23
	T_Print  reduce 23
	T_ReadInteger  reduce 23
	T_ReadLine  reduce 23
	T_Identifier  reduce 23
	T_IntConstant  reduce 23
	T_BoolConstant  reduce 23
	T_DoubleConstant  reduce 23
	T_StringConstant  reduce 23
	T_Minus  reduce 23
	T_Not  reduce 23
	T_Semicolon  reduce 23
	T_LParen  reduce 23
	T_LBrace  reduce 23
	T_RBrace  reduce 23

	VarDec  goto 43
	Var  goto 12
	Type  goto 30
	Int  goto 14
	Double  goto 15
	Bool  goto 16
	String  goto 17
	TIdent  goto 18
	StmtSt  goto 44


state 43
	VarDecSt : VarDecSt VarDec .  (22)

	.  reduce 22


state 44
	StmtBlock : T_LBrace VarDecSt StmtSt . T_RBrace  (20)
	StmtSt : StmtSt . Stmt  (24)

	T_Null  shift 45
	T_This  shift 46
	T_For  shift 47
	T_While  shift 48
	T_If  shift 49
	T_Return  shift 50
	T_Break  shift 51
	T_New  shift 52
	T_NewArray  shift 53
	T_Print  shift 54
	T_ReadInteger  shift 55
	T_ReadLine  shift 56
	T_Identifier  shift 22
	T_IntConstant  shift 57
	T_BoolConstant  shift 58
	T_DoubleConstant  shift 59
	T_StringConstant  shift 60
	T_Minus  shift 61
	T_Not  shift 62
	T_Semicolon  shift 63
	T_LParen  shift 64
	T_LBrace  shift 38
	T_RBrace  shift 65
	.  error

	Ident  goto 66
	StmtBlock  goto 67
	Stmt  goto 68
	Open  goto 69
	Matched  goto 70
	Expr15  goto 71
	ReturnStmt  goto 72
	PrintStmt  goto 73
	BreakStmt  goto 74
	WhileStmt  goto 75
	ForStmt  goto 76
	MatchedIfStmt  goto 77
	Return  goto 78
	Print  goto 79
	Break  goto 80
	ForHeader  goto 81
	Expr14  goto 82
	WhileHeader  goto 83
	IfHeader  goto 84
	LValue  goto 85
	Expr13  goto 86
	Expr11  goto 87
	Expr12  goto 88
	Expr10  goto 89
	Expr9  goto 90
	Expr8  goto 91
	Expr71  goto 92
	Expr7  goto 93
	Expr6  goto 94
	Expr4  goto 95
	Expr5  goto 96
	Negat  goto 97
	Expr3  goto 98
	Expr2  goto 99
	Excla  goto 100
	Expr1  goto 101
	Call  goto 102
	Expr  goto 103
	Constant  goto 104
	This  goto 105
	FieldA  goto 106
	IntC  goto 107
	DoubleC  goto 108
	BoolC  goto 109
	StringC  goto 110
	Null  goto 111


state 45
	Null : T_Null .  (141)

	.  reduce 141


state 46
	This : T_This .  (142)

	.  reduce 142


state 47
	ForHeader : T_For . T_LParen Expr15 Expr15 Expr14 T_RParen  (41)
	ForHeader : T_For . T_LParen T_Semicolon Expr15 Expr14 T_RParen  (42)
	ForHeader : T_For . T_LParen Expr15 Expr15 T_RParen  (43)
	ForHeader : T_For . T_LParen T_Semicolon Expr15 T_RParen  (44)

	T_LParen  shift 112
	.  error


state 48
	WhileHeader : T_While . Expr16  (46)

	T_LParen  shift 113
	.  error

	Expr16  goto 114


state 49
	IfHeader : T_If . Expr16  (50)

	T_LParen  shift 113
	.  error

	Expr16  goto 115


state 50
	Return : T_Return .  (125)

	.  reduce 125


state 51
	Break : T_Break .  (124)

	.  reduce 124


state 52
	Expr : T_New . T_LParen Ident T_RParen  (108)

	T_LParen  shift 116
	.  error


state 53
	Expr : T_NewArray . T_LParen Expr14 T_Comma Type T_RParen  (109)

	T_LParen  shift 117
	.  error


state 54
	Print : T_Print .  (123)

	.  reduce 123


state 55
	Expr : T_ReadInteger . T_LParen T_RParen  (111)

	T_LParen  shift 118
	.  error


state 56
	Expr : T_ReadLine . T_LParen T_RParen  (110)

	T_LParen  shift 119
	.  error


state 57
	IntC : T_IntConstant .  (148)

	.  reduce 148


state 58
	BoolC : T_BoolConstant .  (150)

	.  reduce 150


state 59
	DoubleC : T_DoubleConstant .  (149)

	.  reduce 149


state 60
	StringC : T_StringConstant .  (151)

	.  reduce 151


state 61
	Negat : T_Minus .  (140)

	.  reduce 140


state 62
	Excla : T_Not .  (139)

	.  reduce 139


state 63
	Matched : T_Semicolon .  (29)

	.  reduce 29


state 64
	Expr : T_LParen . Expr14 T_RParen  (107)

	T_Null  shift 45
	T_This  shift 46
	T_New  shift 52
	T_NewArray  shift 53
	T_ReadInteger  shift 55
	T_ReadLine  shift 56
	T_Identifier  shift 22
	T_IntConstant  shift 57
	T_BoolConstant  shift 58
	T_DoubleConstant  shift 59
	T_StringConstant  shift 60
	T_Minus  shift 61
	T_Not  shift 62
	T_LParen  shift 64
	.  error

	Ident  goto 66
	Expr14  goto 120
	LValue  goto 85
	Expr13  goto 86
	Expr11  goto 87
	Expr12  goto 88
	Expr10  goto 89
	Expr9  goto 90
	Expr8  goto 91
	Expr71  goto 92
	Expr7  goto 93
	Expr6  goto 94
	Expr4  goto 95
	Expr5  goto 96
	Negat  goto 97
	Expr3  goto 98
	Expr2  goto 99
	Excla  goto 100
	Expr1  goto 101
	Call  goto 102
	Expr  goto 103
	Constant  goto 104
	This  goto 105
	FieldA  goto 106
	IntC  goto 107
	DoubleC  goto 108
	BoolC  goto 109
	StringC  goto 110
	Null  goto 111


state 65
	StmtBlock : T_LBrace VarDecSt StmtSt T_RBrace .  (20)

	.  reduce 20


state 66
	LValue : Ident .  (112)
	Call : Ident . ActualsCall  (115)

	T_LParen  shift 121
	T_Plus  reduce 112
	T_Minus  reduce 112
	T_Times  reduce 112
	T_Div  reduce 112
	T_Mod  reduce 112
	T_Less  reduce 112
	T_LessEqual  reduce 112
	T_Greater  reduce 112
	T_GreaterEqual  reduce 112
	T_Assign  reduce 112
	T_Equal  reduce 112
	T_NotEqual  reduce 112
	T_And  reduce 112
	T_Or  reduce 112
	T_Semicolon  reduce 112
	T_Comma  reduce 112
	T_Dot  reduce 112
	T_LBracket  reduce 112
	T_RBracket  reduce 112
	T_RParen  reduce 112

	ActualsCall  goto 122


state 67
	Matched : StmtBlock .  (27)

	.  reduce 27


state 68
	StmtSt : StmtSt Stmt .  (24)

	.  reduce 24


state 69
	Stmt : Open .  (25)

	.  reduce 25


state 70
	Stmt : Matched .  (26)

	.  reduce 26


state 71
	Matched : Expr15 .  (28)

	.  reduce 28


state 72
	Matched : ReturnStmt .  (30)

	.  reduce 30


state 73
	Matched : PrintStmt .  (31)

	.  reduce 31


state 74
	Matched : BreakStmt .  (32)

	.  reduce 32


state 75
	Matched : WhileStmt .  (33)

	.  reduce 33


state 76
	Matched : ForStmt .  (34)

	.  reduce 34


state 77
	Matched : MatchedIfStmt .  (35)

	.  reduce 35


state 78
	ReturnStmt : Return . T_Semicolon  (36)
	ReturnStmt : Return . Expr15  (37)
